--- a/Simulado/index.html
+++ b/Simulado/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matemática</title>
+    <title>Simulado</title>
     <link rel="stylesheet" href="../headermenufooter.css">
     <link rel="stylesheet" href="../estiloMaterias.css">
 </head>
