--- a/Conhecimentos Bancários/index.html
+++ b/Conhecimentos Bancários/index.html
@@ -525,6 +525,15 @@
 
         <section>
 
+            <!-- AULA 04 -->
+
+            <h2>Aula 04 - Noções de Mercado de Capitais</h2>
+
+
+        </section>
+
+        <section>
+
             <!-- AULA 10 -->
     
             <h2>Aula 10 - Sigilo Bancário: Lei Complementar nº 105/2001 e suas alterações</h2>
